<resources>
    <string name="nav_home">Home</string>
    <string name="nav_support">Support</string>
    <string name="nav_bookings">Bookings</string>
    <string name="nav_profile">Profile</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="greeting_default">Hi, Welcome!</string>
    <string name="search_hint">Search for services...</string>
    <string name="banner_description">Promotional Banner</string>
    <string name="section_categories">Service Categories</string>
    <string name="section_popular_services">Popular Services</string>
    <string name="book_now_button">Book Now</string>
    <string name="service_image_description">Service Image</string>
    <string name="placeholder_service_name">Service Name</string>
    <string name="placeholder_price">৳ 0</string>
    <string name="placeholder_rating">★ 0.0</string>
    <string name="category_icon_description">Category Icon</string>
    <string name="placeholder_category_name">Category</string>
    <string name="forgot_password_title">Reset Password</string>
    <string name="forgot_password_subtitle">Enter your registered email address and we\'ll send you a link to reset your password</string>
    <string name="reset_password_button">Send Reset Link</string>
    <string name="back_to_login">Back to Login</string>
    <string name="register_title">Create Account</string>
    <string name="register_subtitle">Sign up to get started with CleaningServiceApp</string>
    <string name="hint_full_name">Full Name</string>
    <string name="register_button">Register</string>
    <string name="login_redirect">Already have an account? Login</string>
    <string name="login_title">Welcome Back</string>
    <string name="login_subtitle">Login to continue using CleaningServiceApp</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_button">Login</string>
    <string name="register_redirect">Don\'t have an account? Register</string>
    <string name="app_name">CleaningServiceApp</string>
    <string name="app_logo_description">App Logo</string>
</resources>